--- a/src/Main.css
+++ b/src/Main.css
@@ -2,6 +2,7 @@
     border-left: 1px black solid;
     border-right: 1px black solid;
     width: 60%;
+    background-color: #7FDBFF
 }
 
 .noteDiv{
@@ -39,6 +40,43 @@ textarea{
 
 .formInput{
     font-weight: bold
+}
+
+/* sidebar:  */
+
+.sidebarDiv{
+    border-left: 1px black solid;
+    border-right: 1px black solid;
+    text-align: center;
+    width: 30%;
+    background-color: #39CCCC;
+}
+
+ul{
+    list-style: disc;
+}
+
+.folderDiv{
+    border: 1px black solid;
+    width: 90%;
+    height: 50px;
+    font-size: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.folderButton, .goBackButton {
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 20px;
+    padding: 20px;
+}
+
+.active{
+    background-color: goldenrod;
 }
 
 
